# step-in-line

./: .gitignore  DEVELOPER.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tag.yml  test.yml
step_in_line/: entities.py  pipeline.py  step.py  template_lambda.py  tf.py  utilities.py
step_in_line/stepfunctions/: README.md  fields.py  inputs.py  steps.py
tests/: test_pipeline.py  test_template_lambda.py  test_tf.py
